# Atlas

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  PROGRESS.md  README.md  phase0_codex_prompts.md  phase1_codex_prompts.md  phase2_codex_prompts.md  phase3_codex_prompts.md  phase4_codex_prompts.md  phase5_codex_prompts.md  phase6_codex_prompts.md  phase7_codex_prompts.md  pyproject.toml
docs/: architecture.md  benchmarking.md  control-plane.md  deployment.md  forge-stage-a.md  hybrid-workers.md  infra.md  intelligent-routing.md  phase0.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase8-exit-review.md  phase8.md  phase9.md  real-cloud-workers.md  remote-workers.md
docs/adr/: 0001-single-python-workspace.md  0002-optional-mlx-runtime-boundary.md  0003-logical-alias-to-multiple-backend-deployments.md  0004-artifact-source-of-truth-for-phase3-reporting.md  0005-deterministic-canary-bucketing.md  0006-phase5-host-native-apple-workers-with-http-boundary.md  0007-phase6-transparent-and-conservative-adaptive-routing.md  0008-phase7-optimization-ready-knob-surface.md  0009-phase7-remote-workers-as-first-class-topology-members.md  0010-phase8-canary-only-cloud-rollout-gating.md  0011-phase8-concrete-vllm-cuda-runtime-behind-generic-worker-contract.md  0012-phase9-forge-stage-a-optimization-and-promotion-model.md  0013-phase9-always-on-campaign-honesty-and-cost-signal-verification.md
docs/examples/: phase4_local_m4pro_workload.json  phase5_compose_benchmark_workload.json  phase5_compose_m4pro.env  phase5_compose_smoke.env  phase5_kind_smoke.env  phase5_kind_smoke_workload.json  phase5_local_m4pro.env  phase5_local_m4pro_workload.json  phase7_remote_worker_stub_control_plane.env  phase7_remote_worker_stub_worker.env  phase8_vllm_cuda_worker.env  phase8_vllm_cuda_worker.secrets.env.example
infra/compose/: compose.remote-worker.yaml  compose.vllm-cuda-worker.yaml  compose.yaml  otel-collector.yaml  prometheus.yml
infra/docker/: Dockerfile.control-plane  Dockerfile.remote-worker
infra/grafana/: switchyard-phase1-local-dashboard.json
infra/kind/: cluster.yaml  remote-worker-stub.yaml
scripts/: control-plane-entrypoint.sh  host_native_mock_worker.py  kind-bootstrap.sh  kind-deploy-control-plane.sh  kind-push-control-plane.sh  kind-smoke.sh  remote-worker-entrypoint.sh
src/switchyard/: __init__.py  config.py  diagnostics.py  logging.py  optimization.py  optimization_profiles.py  telemetry.py
tests/: test_backend_schemas.py  test_benchmark_schemas.py  test_chat_schemas.py  test_config.py  test_control_plane_cli.py  test_diagnostics.py  test_import_boundaries.py  test_optimization_profiles.py  test_optimization_schemas.py  test_routing_schemas.py  test_smoke.py  test_telemetry.py
tests/adapters/: test_factory.py  test_mlx_lm.py  test_mock.py  test_registry.py  test_remote_worker.py  test_vllm_cuda.py  test_vllm_metal.py
tests/bench/: test_artifacts.py  test_campaign_comparison.py  test_campaign_honesty.py  test_campaigns.py  test_candidate_generation.py  test_cli.py  test_executor.py  test_history.py  test_recommendations.py  test_simulation.py  test_workloads.py
tests/control/: test_admission.py  test_affinity.py  test_canary.py  test_circuit.py  test_cloud_rollout.py  test_forge_promotion.py  test_locality.py  test_operator.py  test_policy_rollout.py  test_remote_workers.py  test_spillover.py
tests/gateway/: test_app.py  test_policy_rollout_admin.py  test_remote_worker_admin.py  test_remote_worker_gateway.py  test_trace_capture.py
tests/router/: test_features.py  test_service.py
tests/runtime/: test_mlx_runtime.py  test_vllm_cuda_runtime.py  test_vllm_metal_runtime.py
tests/worker/: test_fake_worker_cli.py  test_vllm_cuda_cli.py  test_vllm_cuda_worker.py  (+2 more)
(+74 files in other folders)
