[project]
name = "switchyard"
version = "0.1.0"
description = "Mac-first, backend-agnostic inference fabric"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "opentelemetry-api>=1.36.0,<2.0.0",
  "opentelemetry-instrumentation-fastapi>=0.57b0,<1.0.0",
  "opentelemetry-sdk>=1.36.0,<2.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "structlog>=25.4.0,<26.0.0",
  "typer>=0.16.0,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
  "mypy>=1.17.0,<2.0.0",
  "pytest>=8.4.0,<9.0.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
  "pytest-cov>=6.2.0,<7.0.0",
  "ruff>=0.12.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/switchyard"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
strict = true
warn_unused_configs = true
namespace_packages = false
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["opentelemetry.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["switchyard.telemetry"]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
